--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,6 +1,6 @@
 .odd-number {
     background-color: #ff8686;
-    font-family: Verdana, DejaVuSans, sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 
 .odd-number.third {
